social icon alignment issue is fixed in footer section

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_footer.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_footer.scss
@@ -6,6 +6,8 @@
         display:inline-block;
         width: 40px;
         height: 40px;
+        margin-right: 7px;
+        cursor: pointer;
 
     }
     li{
@@ -250,6 +252,7 @@ footer{
 							background:$Sprite_icon1 no-repeat -206px -175px;
                             width: 46px;
                             height: 45px;
+                            margin-right: 20px;
 						}
 					}
 					&:nth-child(2){
