--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/layout/_header.scss
@@ -834,7 +834,7 @@
 			}
 			div.invalided-error{
 				/*position: absolute;*/
-			    margin-top: -22px;
+			    margin-top: 0px;
 			    color: red;
 			    margin-left: 3px;
 			    margin-bottom: 5px;
