--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_pdp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_pdp.scss
@@ -785,6 +785,7 @@
 			    padding: 10px 100px 10px 10px;
 			    width: 100%;
 			    border-radius: 3px;
+                line-height: 0;
     		}
     		button{
     			border: 0px;
